# imgpp

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  conanfile.py  conanfile.txt  imgppConfig.cmake
.github/workflows/: ci.yml
header_pkg/: conanfile.py
include/: algorithms.hpp  imgpp.hpp  loaders.hpp  loadersext.hpp  sampler.hpp
src/: CMakeLists.txt  bmpimg.cpp  bson.cpp  cvtest.cpp  helper.cpp  jpegimg.cpp  pfmimg.cpp  pngimg.cpp  ppmimg.cpp  testcase.cpp
src/include/imgpp/: algorithms.hpp  bcdesc.hpp  bchelper.hpp  bcimg.hpp  bcimgpp.hpp  blockimg.hpp  compositeimg.hpp  gl.hpp  glhelper.hpp  glmtraits.hpp  img.hpp  imgbase.hpp  imgpp.hpp  imgpp_bc.hpp  imgpp_block.hpp  loaders.hpp  loadersext.hpp  opencvbinding.hpp  sampler.hpp  texturedesc.hpp  textureformat.hpp  texturehelper.hpp  typetraits.hpp
src/resrc/: astc8x8.ktx  checkboard.ppm  test.ktx
src/src/: bcdesc.cpp  bchelper.cpp  bmpimg.cpp  bson.cpp  clonetest.cpp  cvtest.cpp  gl.cpp  glhelper.cpp  helper.cpp  jpegimg.cpp  ktximage.cpp  ktxloadertest.cpp  loadertest.cpp  pfmimg.cpp  pngimg.cpp  ppmimg.cpp  stringparser.h  testcase.cpp  testppm.cpp
